# sql_exenv

./: .env.example  .gitignore  AGENT_README.md  BIRD_CRITIC_QUICKSTART.md  CLAUDE.md  DATASET_SETUP.md  FAILURE_ANALYSIS.md  FILES_CREATED.md  FINAL_FIXES_ANALYSIS.md  FINAL_STATUS.md  FIX_ITERATION_ANALYSIS.md  GOLDEN_SET_FINAL.md  GOLDEN_SET_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  OPTIMIZE_CLI_USAGE.txt  PHASE_1_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_4_VERIFICATION.md  PHASE_5_COMPLETE.md  PHASE_5_EVALUATION_HARNESS.md  QA_REPORT_HYPOPG.md  QA_SUMMARY_HYPOPG.md  QUICKSTART.md  README.md  RUN_EVALUATION.md  SCHEMA_FIX_SUMMARY.md  SMOKE_TEST_FINAL_SUMMARY.md  STATEFUL_IMPLEMENTATION.md  STATUS_AND_NEXT_STEPS.md  TESTING_STATUS.md  VERIFICATION_REPORT.md  bird_critic_test.json  cli.py  debug_explain_options.py  debug_feedback.json  debug_hypopg.py  debug_test_04.py  demo_cli_example.py  demo_stateful.py  (+40 more)
dev/: pyvenv.cfg
docker/: README.md  example_queries.sql  init.sql
docs/: architecture.md  executive-summary.md  metamorphic_testing.md  project-summary.md  review-summary.txt  technical-brief.md
docs/guides/: bird-data-inventory.md  bird-setup.md  tpch-farmshare.md
examples/: .env.example  Makefile  README.md
examples/queries/: sample_queries.sql  test_queries.sql
examples/schemas/: setup.sql  teardown.sql
examples/scripts/: run_examples.py  setup_database.py
scripts/: download_bird_critic_dataset.py  setup_bird_databases.py  verify_bird_critic_infrastructure.py
scripts/setup/: setup_bird_databases.sh  setup_original.sh
scripts/testing/: download_bird_data.py  download_bird_simple.py
src/: __init__.py  actions.py  agent.py  analyzer.py  bird_critic_runner.py  bird_validator.py  display.py  error_classifier.py  evaluation_metrics.py  llm.py  mcp_server.py  schema_fetcher.py  semanticizer.py
src/agentic_dba/: __init__.py  agent.py  analyzer.py  bird_critic_runner.py  bird_validator.py  evaluation_metrics.py  mcp_server.py  semanticizer.py  test_case_runner.py
src/agentic_dba/testing/: __init__.py  rule_based_translator.py
src/extensions/: __init__.py  detector.py
src/tools/: __init__.py  hypopg.py
src/validators/: __init__.py  base.py  differential.py  metamorphic.py  result_comparator.py
tests/: conftest.py  evaluation_metrics_test.py  test_agent.py  test_analyzer.py  test_bird_setup.py  test_case_runner_test.py  test_cli_tracer.py  test_database_setup.py  test_demo.py  test_e2e.py  test_edge_cases.py  test_error_classifier.py  test_exev_features.py  test_failed_action_tracking.py  test_golden_set.py  test_hypopg.py  test_hypopg_extended.py  test_hypopg_integration.py  test_schema_fetcher.py  test_validators.py
tests/fixtures/: gather_parallel_seq_scan.json
