[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql_exenv"
version = "0.1.0"
description = "PostgreSQL query optimization system with semantic feedback for autonomous agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "yudduy"}
]
keywords = ["postgresql", "query-optimization", "ai-agents", "sql-analysis", "autonomous-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "sqlparse>=0.5.0",
    "yaspin>=3.0.0",
]

[project.optional-dependencies]
# LLM Providers (install at least one)
anthropic = ["anthropic>=0.40.0"]
groq = ["groq>=0.4.0"]
openrouter = ["openai>=1.0.0"]

# All LLM providers
all-providers = [
    "anthropic>=0.40.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
]

# MCP support (optional)
mcp = ["mcp>=0.9.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "anthropic>=0.40.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

# No scripts defined yet

[project.urls]
Homepage = "https://github.com/yudduy/sql_exenv"
Documentation = "https://github.com/yudduy/sql_exenv/tree/main/docs"
Repository = "https://github.com/yudduy/sql_exenv"
Issues = "https://github.com/yudduy/sql_exenv/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: Runs DB-backed integration tests",
    "golden: Runs the Golden Set validation suite",
    "asyncio: Marks async tests that require pytest-asyncio",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.hatch.build.targets.wheel]
packages = ["src"]
